# mtcnn_face_detection_and_tracking

./: .gitignore  CMakeLists.txt  README.md  det_and_track.cpp  lk_tracker.cpp
